test/golden96/helloNLNLNL{piCLl}.13123157148160021427.golden
INITIALPATH:10:6: error:
    • 
unexpected "}"
expecting "<", ">", "^" or "="
    • In the quasi-quotation: [fmt|hello


{pi:l}|]
   |
10 | {pi:l}|]
   |      ^